src/parser_tests/tests_input/unit/good/Good41.ty
singleton class RandomGenerator { 
    
    values: {
        randomInt: Int = 338894;
    }
    
    functions: {
        generate: () -> Int = ExternalRandomUtils.getRandomInt()
    
        private getRandomInt: () -> Int = this.randomInt
    }
}
