src/parser_tests/tests_input/unit/bad/Bad11.ty
singleton class RandomGenerator { 
    
    values: { 
        RANDOM_INT: Int = 338894;
    }
    
    functions: {
        generate: () -> Int = getRandomInt()
    
        private getRandomInt: () -> Int = this.RANDOM_INT
    }
}
